--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon server.js",
-        "start": "node dist/app.js",
-        "build": "npm install && npm install nodemon"
+        "start": "node server.js"
     },
     "keywords": [],
     "author": "",
