added brandrs, banner, category functionaltiy

--- a/.env
+++ b/.env
@@ -8,3 +8,9 @@ EMAIL_ADMIN=reachout@sparkshift.digital
 EMAIL_PASS=Sparkshift@123
 EMAIL_HOST_SMTP=smtp.hostinger.com
 EMAIL_PORT_SMTP=465
+
+
+CLOUDINARY_CLOUD_NAME=drbxyyh2o
+CLOUDINARY_API_KEY=585679694745333
+CLOUDINARY_API_SECRET=J5cbHQQn-lunRYAkh55pO5faEc8
+CLOUDINARY_UPLOAD_PRESET= E-commerce
