--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "description": "",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cloudinary": "^2.6.1",
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
         "express": "^4.18.2",
+        "http-status-codes": "^2.3.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.6.1",
-        "nodemailer": "^7.0.2"
+        "multer": "^1.4.5-lts.2",
+        "multer-storage-cloudinary": "^4.0.0",
+        "nodemailer": "^7.0.2",
+        "slugify": "^1.6.6"
     },
     "devDependencies": {
         "nodemon": "^3.0.3"
