--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ PORT=5000
 MONGO_URI=mongodb+srv://Ecommerce:Ecommerce@ecommerce.lqgwjtg.mongodb.net/?retryWrites=true&w=majority&appName=Ecommerce
 
 JWT_SECRET=Ecommerce_template
+COMPANY_NAME=Aajastha
 
 EMAIL_ADMIN=reachout@sparkshift.digital
 EMAIL_PASS=Sparkshift@123
