--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
         "express": "^4.18.2",
+        "express-async-handler": "^1.2.0",
         "http-status-codes": "^2.3.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^7.6.1",
@@ -26,6 +27,7 @@
         "slugify": "^1.6.6"
     },
     "devDependencies": {
+        "@types/node": "^22.15.21",
         "nodemon": "^3.0.3"
     }
 }
